--- a/convolution.ipynb
+++ b/convolution.ipynb
@@ -2838,7 +2838,7 @@
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 1875/1875.0 [00:10&lt;00:00, 175.93it/s]",
+            "value": " 1875/1875.0 [49:30&lt;00:00,  1.58s/it]",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
@@ -3083,7 +3083,7 @@
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 313/? [00:01&lt;00:00, 207.19it/s]",
+            "value": " 313/? [49:20&lt;00:00,  9.46s/it]",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
@@ -7484,7 +7484,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Sfvn5c9yWABe",
-        "outputId": "9ae51f73-f33b-4531-f153-2eba52236633",
+        "outputId": "745db8bf-3904-49ac-e415-e40af3e0d58f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -7498,7 +7498,7 @@
         "print(f\"I =\")\n",
         "print(I)"
       ],
-      "execution_count": 62,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
@@ -7520,7 +7520,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "bDhH5cxzWABl",
-        "outputId": "929eea68-74b6-454c-de19-559e69ea0502",
+        "outputId": "088a0679-c1e5-4bda-a54a-41278b808025",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -7534,7 +7534,7 @@
         "print(f\"K_1 =\")\n",
         "print(K_1)\n"
       ],
-      "execution_count": 69,
+      "execution_count": 114,
       "outputs": [
         {
           "output_type": "stream",
@@ -7568,29 +7568,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WidbhmkRWABr",
-        "outputId": "f048003c-d8c3-48a8-9fc5-3edfec219aed",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "WidbhmkRWABr"
       },
       "source": [
         "# put your answer here\n",
-        "R_0 = np.array([[49,113, 11],[237, 163, 119],[89, 178, 75]])"
+        "R_0 = np.array([[49 ,113 , 11 ],[237, 163, 119],[89, 178, 75]])"
       ],
-      "execution_count": 71,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[ 49 113  11]\n",
-            " [237 163 119]\n",
-            " [ 89 178  75]]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 134,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -7633,16 +7618,14 @@
       "source": [
         "def convolution_forward_numpy(image, kernel):\n",
         "    # YOUR CODE HERE \n",
-        "    M, N = image.shape\n",
-        "    K, P = image.shape\n",
-        "    out = np.zeros(len(image)-len(kernel)+1, len(image[0])-len(kernel[0])+1)\n",
+        "    out = np.zeros((image.shape[0]-kernel.shape[0]+1, image.shape[1]-kernel.shape[1]+1))\n",
         "    for x in range(image.shape[1]-2):\n",
         "        for y in range(image.shape[0]-2):\n",
         "            out[y, x] = (kernel * image[y:(y+3), x:(x+3)]).sum()\n",
         "    return out\n",
         "      "
       ],
-      "execution_count": 108,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -7659,29 +7642,39 @@
       "metadata": {
         "id": "iRubH1y6WAB1",
         "lines_to_next_cell": 2,
-        "outputId": "945ff836-0c2c-417d-bd41-2200abe378f9",
+        "outputId": "e0ab6643-8942-4cc4-9221-abd87ffd5ea3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 317
+          "height": 249
         }
       },
       "source": [
-        "print(convolution_forward_numpy(I, K_0))\n",
+        "a = convolution_forward_numpy(I, K_0)\n",
+        "\n",
+        "print(np.array_equal(a, R_0))\n",
+        "\n",
         "assert convolution_forward_numpy(I, K_0) == R_0\n",
         "# assert convolution_forward_numpy(I, K_1) == R_1"
       ],
-      "execution_count": 109,
+      "execution_count": 138,
       "outputs": [
         {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
           "output_type": "error",
-          "ename": "TypeError",
+          "ename": "ValueError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-109-aafec1739a08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconvolution_forward_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mconvolution_forward_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mR_0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# assert convolution_forward_numpy(I, K_1) == R_1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-108-654de528337a>\u001b[0m in \u001b[0;36mconvolution_forward_numpy\u001b[0;34m(image, kernel)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mconvolution_forward_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkernel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkernel\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: data type not understood"
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-138-c4a9584b05de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mconvolution_forward_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mR_0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# assert convolution_forward_numpy(I, K_1) == R_1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
           ]
         }
       ]
