--- a/convolution.ipynb
+++ b/convolution.ipynb
@@ -7593,9 +7593,9 @@
       },
       "source": [
         "# put your answer here\n",
-        "R_1 = np.array([[49,113, 11],[237, 163, 119],[89, 178, 75]])"
+        "R_1 = np.array([[1242, 646, 356],[390, 1010, 295],[1048, 316, 740]])"
       ],
-      "execution_count": 82,
+      "execution_count": 147,
       "outputs": []
     },
     {
@@ -7641,43 +7641,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "iRubH1y6WAB1",
-        "lines_to_next_cell": 2,
-        "outputId": "e0ab6643-8942-4cc4-9221-abd87ffd5ea3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 249
-        }
+        "lines_to_next_cell": 2
       },
       "source": [
-        "a = convolution_forward_numpy(I, K_0)\n",
-        "\n",
-        "print(np.array_equal(a, R_0))\n",
-        "\n",
-        "assert convolution_forward_numpy(I, K_0) == R_0\n",
-        "# assert convolution_forward_numpy(I, K_1) == R_1"
+        "assert np.array_equal(convolution_forward_numpy(I, K_0), R_0)\n",
+        "assert np.array_equal(convolution_forward_numpy(I, K_1), R_1)"
       ],
-      "execution_count": 138,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "True\n",
-            "\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-138-c4a9584b05de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mR_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mconvolution_forward_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK_0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mR_0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# assert convolution_forward_numpy(I, K_1) == R_1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-          ]
-        }
-      ]
+      "execution_count": 148,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
